[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.15.1"
hashes = { package = "bitcoin_hashes", version = ">= 0.12, <= 0.14", default-features = false }
# secp256k1 = { path = "/home/ubuntu/src/rust-secp256k1", default-features = false, features = ["recovery", "lowmemory"] }
secp256k1 = { git = "https://github.com/libraries/rust-secp256k1", branch = "musl", default-features = false, features = ["recovery", "lowmemory"] }
